[project]
name = "metabolights-utils"
version = "1.4.12"
description = "MetaboLights open metabolomics data repository utility tools and API."
authors = [{ name = "MetaboLights Team", email = "metabolights-dev@ebi.ac.uk" }]
requires-python = ">=3.9,<4"
readme = "README.md"
license = "Apache-2.0"
keywords = [
    "metabolights",
    "metabolomics",
    "ISA data model",
    "mtbls",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: File Formats",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Utilities",
]
dependencies = [
    "pydantic>=2.11.7",
    "pydantic-settings>=2.0.3",
    "unidecode>=1.3.8",
    "jsonschema>=4.24.0",
    "click>=8.1.7",
    "beautifulsoup4>=4.12.3",
    "jsonpath-ng>=1.7.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/EBI-Metabolights/metabolights-utils"
Repository = "https://github.com/EBI-Metabolights/metabolights-utils"

[project.scripts]
mtbls = "metabolights_utils.commands.cli:cli"

[dependency-groups]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.24.0,<0.25",
]
dev = [
    "coverage[toml]>7.2",
    "mkdocs>=1.4.3",
    "griffe>=0.32.3",
    "mkdocstrings-python>=1.2.1",
    "markdown-mdantic>=1.3.3",
    "mkdocs-material>=9.5.49,<10",
    "ipykernel>=6.29.4,<7",
    "ruff>=0.13.2",
    "pre-commit>=4.3.0",
    "import-linter>=2.5",
    "commitizen>=4.9.1",
]

[tool.uv]
default-groups = [
    "test",
    "dev",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["metabolights_utils*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
"metabolights_utils" = ["**/*.json"]

[tool.setuptools]
include-package-data = true

[tool.ruff.lint]
extend-select = ["E4", "E7", "E9", "F", "I", "G", "SLF", "Q", "T"]
ignore = [ "ANN401"]

fixable = ["ALL"]

[tool.pytest.ini_options]
addopts = "-ra -q -v"
testpaths = [
    "tests"
]

[tool.coverage.run]
omit = [".*", "*/tests/*", "*/site-packages/*", "*/docs/*", "*/site/*", "*/dist/*", ".*/*"]

[tool.coverage.report]
fail_under = 80

[tool.coverage.html]
directory = "coverage_html_report"


[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "uv"
version = "0.1.31"
tag_format = "v$major.$minor.$patch"
version_files = [
    "pyproject.toml:version",
    "metabolights_utils/__init__.py:__version__",
]
bump_message = "bump: version $current_version -> $new_version"
update_changelog_on_bump = true


[tool.importlinter]
include_external_packages = true
root_packages = ["metabolights_utils"]

[[tool.importlinter.contracts]]
name = "Layer Dependencies"
type = "layers"
layers = [
    "metabolights_utils.provider",
    "metabolights_utils.isatab",
    "metabolights_utils.models",
]
