[project]
name = "metabolights-utils"
version = "1.4.24"
description = "MetaboLights open metabolomics data repository utility tools and API."
authors = [{ name = "MetaboLights Team", email = "metabolights-dev@ebi.ac.uk" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "Apache-2.0"
keywords = [
    "metabolights",
    "metabolomics",
    "ISA data model",
    "mtbls",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: File Formats",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Utilities",
]
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "unidecode>=1.4.0",
    "jsonschema>=4.26.0",
    "click>=8.3.1",
    "beautifulsoup4>=4.14.3",
    "jsonpath-ng>=1.8.0",
    "httpx>=0.28.1",
]

[project.urls]
Homepage = "https://github.com/EBI-Metabolights/metabolights-utils"
Repository = "https://github.com/EBI-Metabolights/metabolights-utils"

[project.scripts]
mtbls = "metabolights_utils.commands.cli:cli"

[dependency-groups]
dev = [
    "coverage[toml]>=7.13.4",
    "mkdocs>=1.6.1",
    "griffe>=2.0.0",
    "mkdocstrings-python>=2.0.3",
    "markdown-mdantic>=2.1.1",
    "mkdocs-material>=9.7.6",
    "ipykernel>=6.31.0,<7",
    "ruff>=0.15.5",
    "pre-commit>=4.3.0",
    "import-linter>=2.10",
    "commitizen>=4.13.9",
    "pytest>=8.4.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-asyncio>=0.24.0",


    # security related
    "requests>=2.33.0",
    "Pygments>=2.20.0",
    "tornado>=6.5.5",
]

[tool.uv]
default-groups = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["metabolights_utils*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
"metabolights_utils" = ["**/*.json"]

[tool.setuptools]
include-package-data = true

[tool.ruff.lint]
extend-select = ["E4", "E7", "E9", "F", "I", "G", "SLF", "Q", "T"]
ignore = [ "ANN401", "E501"]

fixable = ["ALL"]

[tool.pytest.ini_options]
addopts = "-ra -q -v"
testpaths = [
    "tests"
]

[tool.coverage.run]
omit = [".*", "*/tests/*", "*/site-packages/*", "*/docs/*", "*/site/*", "*/dist/*", ".*/*"]

[tool.coverage.report]
fail_under = 80

[tool.coverage.html]
directory = "coverage_html_report"


[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "uv"
version = "0.1.31"
tag_format = "v$major.$minor.$patch"
version_files = [
    "pyproject.toml:version",
    "metabolights_utils/__init__.py:__version__",
]
bump_message = "bump: version $current_version -> $new_version"
update_changelog_on_bump = true


[tool.importlinter]
include_external_packages = true
root_packages = ["metabolights_utils"]

[[tool.importlinter.contracts]]
name = "Layer Dependencies"
type = "layers"
layers = [
    "metabolights_utils.provider",
    "metabolights_utils.isatab",
    "metabolights_utils.models",
]
